# Image-Caption-Generator

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
artifacts/models/: tokenizer.pkl
backend/: api.py
config/: paths_config.py
frontend/: ui.py
notebooks/: Data_Analysis.ipynb
pipeline/: training_pipeline.py
src/: CustomDataGeneration.py  data_ingestion.py  data_processing.py  model_architecture.py  model_training.py
utils/: Loaders.py  caption_generator.py
